# haskell-programming-book-exercise

./: .gitignore  haskell-programming.cabal  shell.nix  stack.yaml
src/ch03/: chapter3.hs  reverse.hs
src/ch04/: chapter4.hs
src/ch05/: chapter5.hs
src/ch06/: chapter6.hs
src/ch07/: Chapter7.hs
src/ch08/: Chapter8.hs
src/ch09/: Chapter9.hs  Cipher.hs
src/ch10/: Chapter10.hs  LiveCoding.hs
src/ch11/: Chapter11.hs
src/ch12/: Chapter12.hs  Live.hs
src/ch14/: Chapter14.hs  Hangman.hs  WordNumberTest.hs
src/ch15/: Chapter15.hs
src/ch17/: Chapter17.hs  ListApp.hs  VE.hs
src/ch18/: CC.hs  Chapter18.hs
src/ch20/: Chapter20.hs  Code.hs
src/ch21/: Chapter21.hs
src/ch22/: Chapter22.hs  Intermediate.hs
src/ch23/: Chapter23.hs
src/ch24/: LearnParsers.hs  TryTry.hs
src/ch25/: CompComp.hs
src/ch26/: ChEx.hs  Morra.hs  ScottyApp.hs  Stackup.hs
src/ch27/: Core_Dump.hs
src/ch28/: Chapter28.hs  SimpleQueue.hs
src/ch29/: Chapter29.hs  Vigenere.hs
src/randomstuff/: DRegx.hs
